[tool.poetry]
name = "holamundo"
version = "0.1.0"
description = "Hola mundo! con PySide6"
authors = ["Francisco Luna"]
license = "CC0 v1.0 Universal"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.11,<3.14"
pyside6 = "^6.8.2.1"


[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^1.2.0", python = "^3.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

holamundo = "holamundo.holamundo:main"
